# Personal_AI_Employee

./: .env.example  .gitignore  .mcp.json  ACTION_PLAN.md  AGENTS.md  AGENT_TEAMS_QUICKSTART.md  API_KEYS_SETUP.md  ARCHITECTURE.md  BRONZE_TIER_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OVERVIEW.md  Dashboard.md  EMAIL_SETUP_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  FREE_AI_SETUP.md  GEMINI_OPENROUTER_OPENAI_SETUP.md  GOLD_TIER_COMPLETE.md  GOLD_TIER_IMPLEMENTATION.md  GOLD_TIER_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LINKEDIN_SETUP.md  MISSION_ACCOMPLISHED.md  MULTI_CLI_GUIDE.md  MULTI_PROVIDER_SETUP.md  OPERATIONS_RUNBOOK.md  PLAYWRIGHT_CLI_SETUP.md  PROJECT_STATUS_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_DEMO.md  SESSION_COMPLETE.md  SETUP.md  SETUP_GUIDE.md  (+29 more)
.claude/: KIRO_QUICKSTART.md  settings.json  skills.json
cloud/: CONFIG  cloud_setup.sh  deploy_odoo.sh  health_monitor.sh
config/: agent_teams_config.json
demo/: demo_script.sh  end_to_end_demo.py  quick_start.sh  simple_integration_test.py  test_all_mcp_servers.py  test_e2e_automated.py  test_mcp_servers.py  validate_gold_tier.py  whatsapp_complete_demo.py  whatsapp_demo.py
docs/: AGENT_TEAMS_GUIDE.md  AGENT_TEAMS_SILVER_GOLD.md  AGENT_TEAMS_WORKFLOWS.md  COMPLETE_SESSION_STATUS_REPORT.md  CRM_FTE_SPEC.md  GOLD_TIER_CHECKLIST.md  LESSONS_LEARNED.md  SOCIAL_MEDIA_AUTHENTICATION.md  SOCIAL_MEDIA_AUTH_SETUP_SUMMARY.md  SOCIAL_MEDIA_SETUP.md  TWITTER_AUTH_INSTRUCTIONS.md  VIDEO_RECORDING_GUIDE.md  WHATSAPP_AUTOMATION.md  WHATSAPP_DEMO.md  ai-engineering-architecture.md  linkedin-automation-professional.md  mcp-config.md
evals/: EVAL_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INTERNAL_MECHANISMS.md  README.md  REUSABLE_INTELLIGENCE_SUMMARY.md  SKILL_EVAL_GUIDE.md  anthropic_evals.py  runner.py
hooks/: __init__.py  agent_teams_hooks.md  handlers.py  server.py
mcp/: base.py
(+451 files in other folders)
