[project]
name = "personal-ai-employee"
version = "0.1.0"
description = "Personal AI Employee - Autonomous Digital FTE"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio-mode = "auto"
testpaths = ["tests"]
